tests/snapshot/error/source_locations/expression/yield_star/error_iterator_no_throw_method.js
var iterable = {
  [Symbol.iterator]() {
    return {
      next() {
        return { value: 1, done: false };
      }
    };
  }
}

function *generator() {
  yield* iterable;
}

let iter = generator();
iter.next();
iter.throw();